--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="container">
       <div class="review">
-        <p id="reviewHeading">Your Review:</p>
+        <!-- <p id="reviewHeading">Your Review:</p> -->
         <textarea
           id="reviewInput"
           placeholder="Type Your Review..."
@@ -25,7 +25,7 @@
         <div class="buttons">
           <button type="submit" id="submitBtn">Submit</button>
           <button type="reset" id="resetBtn">Reset</button>
-          <button type="submit" id="next">Next Page</button>
+          <!-- <button type="submit" id="next">Next Page</button> -->
         </div>
       </div>
       <div class="reviewTwo">
